fix: changed card-text to white to improve contrast (#201)

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,7 @@ a.nav-link:hover {
 }
 
 .card-text {
-  color: black;
+  color: white;
 }
 
 @media (prefers-color-scheme: dark) {
